# lgr-live-bootcamp-project

./: .env.example  .gitignore  README.md  compose.local.yml  compose.override.yml  compose.yml  init-letsencrypt.sh  nginx.conf  nginx.local.conf
auth-service/: Cargo.toml
auth-service/.sqlx/: query-67d5eb2964144d0f16e1b9f7ac1aad78545be3c7101b2751abcc216ea74e4f81.json  query-d3493b604fcca905a6747f65b9d429e92462603c79921ce41799f41c52c1f13f.json
auth-service/assets/: app.js  index.html
auth-service/src/: lib.rs  main.rs
auth-service/src/app_state/: mod.rs
auth-service/src/domain/: data_stores.rs  email.rs  error.rs  login_attempt_id.rs  mod.rs  password.rs  two_fa_code.rs  user.rs
auth-service/src/routes/: delete_user.rs  login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: data_stores.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs
auth-service/src/services/data_stores/: hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/templates/: app.js
auth-service/tests/api/: delete_user.rs  helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
playwright/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
postman/: Digital Ocean LGR.postman_environment.json  LGR.postman_collection.json  localhost.postman_environment.json  workspace.postman_globals.json
(+28 files in other folders)
