[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }

[dev-dependencies]
reqwest = { version = "0.12.22", default-features = false, features = ["json"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
